<resources>
    <string name="app_name">Money Book</string>
    <string name="action_settings">Settings</string>
    <string name="amountHint">Amount</string>
    <string name="tagsHint" translatable="false">Tags</string>
    <string name="dateHint">Date</string>
    <string name="descriptionHint">Description</string>
    <string name="saveButton">SAVE</string>
    <string name="empty_not_saved">Item not saved because is empty or zero</string>
    <string name="clear_all_data">delete_all_data</string>
    <string name="snack_bar_text">1 Item deleted</string>
    <string name="snack_bar_undo">UNDO</string>

    <string name="span_TextView_frgmBalance">Span</string>
    <string name="_from_span_start">From</string>
    <string name="to_span_end">To</string>
    <string name="balance">Balance</string>
    <string name="income_text_view">Income:</string>
    <string name="expanses">Expanses:</string>
    <string name="total_string">Total:</string>
    <string name="statistics">Statistics</string>

    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="reset_button">RESET TAG</string>
    <string name="add_tag_filter">Add tag</string>
</resources>
