<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".NewItemActivity">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layoutAmountTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/insert_amountTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/amountHint"
            android:inputType="numberSigned|numberDecimal" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layoutTagView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/insertTagsTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/tagsHint" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/dateHint">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/insertDateView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/dateHint"
            android:inputType="date" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/descriptionHint">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/insert_item_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/descriptionHint" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/saveItemButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/saveButton" />
</LinearLayout>