<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroung"
    android:clipToPadding="false"
    android:orientation="vertical"
    android:overScrollMode="ifContentScrolls"
    android:padding="4dp"
    tools:context=".UI.BalanceFragment">


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fadingEdgeLength="4dp"
        app:cardCornerRadius="4dp"
        app:cardElevation="16dp"
        app:cardMaxElevation="24dp"
        app:contentPadding="4dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/span_start"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:drawableStart="@drawable/ic_my_calendar_24px"
                    android:gravity="center_vertical"
                    android:text="@string/_from_span_start" />

                <TextView
                    android:id="@+id/span_end"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:drawableStart="@drawable/ic_my_calendar_24px"
                    android:gravity="center_vertical"
                    android:text="@string/to_span_end" />
            </LinearLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/linearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center">

                <Button
                    android:id="@+id/reset_tag_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:background="#00FFFFFF"
                    android:text="@string/reset_button"
                    android:textColor="@color/tagColor"
                    app:layout_constraintBaseline_toBaselineOf="@+id/tag_textview_frg"
                    app:layout_constraintEnd_toStartOf="@+id/tag_textview_frg"
                    app:layout_constraintHorizontal_chainStyle="spread"
                    app:layout_constraintStart_toStartOf="parent" />

                <Button
                    android:id="@+id/show_tag_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="#00FFFFFF"
                    android:text="@string/add_tag_filter"
                    android:textColor="@color/tagColor"
                    app:layout_constraintBaseline_toBaselineOf="@+id/tag_textview_frg"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/tag_textview_frg" />

                <TextView
                    android:id="@+id/tag_textview_frg"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="14dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/show_tag_btn"
                    app:layout_constraintStart_toEndOf="@+id/reset_tag_button" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingStart="12dp"
                android:paddingEnd="12dp">

                <TextView
                    android:id="@+id/income_String"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/income_text_view"
                    android:textAlignment="center" />

                <TextView
                    android:id="@+id/income_textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/income_text_view"
                    android:textAlignment="center"
                    android:textColor="@color/positiveAmount"
                    android:textSize="18sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingStart="12dp"
                android:paddingEnd="12dp">

                <TextView
                    android:id="@+id/expanses_string"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/expanses"
                    android:textAlignment="center" />

                <TextView
                    android:id="@+id/expanses_textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/expanses"
                    android:textAlignment="center"
                    android:textColor="@color/negativeAmount"
                    android:textSize="18sp" />
            </LinearLayout>



            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingStart="12dp"
                android:paddingEnd="12dp">

                <TextView
                    android:id="@+id/Total_balance_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/total_string"
                    android:textAlignment="center" />

                <TextView
                    android:id="@+id/total_textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/total_string"
                    android:textAlignment="center"
                    android:textColor="#000000"
                    android:textSize="18sp" />
            </LinearLayout>

        </LinearLayout>
    </androidx.cardview.widget.CardView>

</LinearLayout>